# vox-easy

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  auth.py  db.py  main.py  models.py  package-lock.json  package.json  requirements.txt  vox.spec
.github/workflows/: build-mac.yml
app/: globals.css  layout.tsx  page.tsx  types.ts
app/components/: Dashboard.tsx  HotkeyPicker.tsx  License.tsx  Settings.tsx  Sidebar.tsx
app/lib/: storage.ts  tauri.ts  whisper.ts
app/recording/: layout.tsx  page.tsx
backend/: index.js  package.json
engine/: audio.py  keyboard.py  transcriber.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs
web/: dashboard.html  index.html  login.html  style.css
